--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8011/,http://localhost:8012/,http://localhost:8013/
+      defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
 
 ---
 spring:
